test/conformance/kuttl/generate/clusterpolicy/standard/clone/sync/cpol-clone-list-sync-create/01-cluster-policy.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- manifests.yaml
- cluster-policy.yaml
assert:
- cluster-policy-ready.yaml
