test/conformance/kuttl/generate/clusterpolicy/standard/clone/sync/cpol-clone-list-sync-create/01-manifests.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: sync-secret-with-multi-clone
spec:
  generateExistingOnPolicyUpdate: true
  rules:
  - name: sync-secret
    match:
      any:
      - resources:
          kinds:
          - Namespace
    exclude:
      any:
      - resources:
          namespaces:
          - kube-system
          - default
          - kube-public
          - kyverno
    generate:
      namespace: "{{request.object.metadata.name}}"
      synchronize : true
      cloneList:
        namespace: default
        kinds:
          - v1/Secret
          - v1/ConfigMap
        selector:
          matchLabels:
            allowedToBeCloned: "true"
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: bootstap-config
  namespace: default
  labels:
    allowedToBeCloned:  "true"
data:
  initial_lives: "15"
---
apiVersion: v1
kind: Secret
metadata:
  name: image-secret
  namespace: default
  labels:
    allowedToBeCloned:  "true"
type: kubernetes.io/basic-auth
stringData:
  username: admin
  password: t0p-Secret-super
