test/conformance/kuttl/generate/clusterpolicy/standard/clone/sync/cpol-clone-list-sync-create/02-assert.yaml
apiVersion: v1
kind: Secret
metadata:
  name: image-secret
  namespace: prod
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: bootstap-config
  namespace: prod
