test/conformance/kuttl/generate/clusterpolicy/standard/clone/sync/cpol-clone-list-sync-create/03-assert.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: bootstap-config
  namespace: prod
