test/conformance/kuttl/generate/clusterpolicy/standard/clone/sync/cpol-clone-list-sync-create/resource-assert.yaml
---
apiVersion: v1
data:
  password: dDBwLVNlY3JldC1zdXBlcg==
  username: YWRtaW4=
kind: Secret
metadata:
  labels:
    allowedToBeCloned: "true"
    app.kubernetes.io/managed-by: kyverno
    generate.kyverno.io/clone-policy-name: sync-with-multi-clone
    kyverno.io/generated-by-kind: Namespace
    kyverno.io/generated-by-name: prod-1
    kyverno.io/generated-by-namespace: ""
    policy.kyverno.io/policy-name: sync-with-multi-clone
    policy.kyverno.io/synchronize: enable
  name: image-secret
  namespace: prod-1
type: kubernetes.io/basic-auth
---
apiVersion: v1
data:
  initial_lives: "15"
kind: ConfigMap
metadata:
  labels:
    allowedToBeCloned: "true"
    app.kubernetes.io/managed-by: kyverno
    generate.kyverno.io/clone-policy-name: sync-with-multi-clone
    kyverno.io/generated-by-kind: Namespace
    kyverno.io/generated-by-name: prod-1
    kyverno.io/generated-by-namespace: ""
    policy.kyverno.io/policy-name: sync-with-multi-clone
    policy.kyverno.io/synchronize: enable
  name: bootstrap-config
  namespace: prod-1
